# imglayers-mcp

./: .gitignore  README.md  pyproject.toml
eval/: REPORT.md  REPORT_V2.md  build_dataset.py  metrics.py  report.py  run.py  run_with_enrich.py  score.py
eval/enrichments/: 01_simple_banner.json  02_tech_banner.json  03_product_card.json  04_simple_poster.json  05_sale_badge.json  06_article_header.json  07_app_screen.json  08_minimal_logo.json  09_multi_badge.json  10_high_contrast.json
eval/groundtruth/: 01_simple_banner.json  02_tech_banner.json  03_product_card.json  04_simple_poster.json  05_sale_badge.json  06_article_header.json  07_app_screen.json  08_minimal_logo.json  09_multi_badge.json  10_high_contrast.json  11_illustration_scene.json  12_photo_mixed_overlay.json  13_matome_layout.json
eval/runs/: card-inference.score.json  dedup.score.json  dedup2.score.json  enriched.score.json  line-merge-v2.score.json  no-preprocess.score.json  ocr-preprocess.score.json  soft-containers.score.json  v10.score.json  v2-sam2.score.json  v3-hybrid.score.json  v3-layerd.score.json  v8-phase-a-raw.score.json  v8-phase-a.score.json  v9-all.score.json  v9-enriched.score.json  v9-final.metrics.json  v9-fix.score.json  v9-fix3.score.json  word-merge.score.json
eval/runs/baseline/: 01_simple_banner.json  02_tech_banner.json  03_product_card.json  04_simple_poster.json  05_sale_badge.json  06_article_header.json  07_app_screen.json  08_minimal_logo.json  09_multi_badge.json  10_high_contrast.json
eval/runs/card-inference/: 01_simple_banner.json  02_tech_banner.json  03_product_card.json  04_simple_poster.json  05_sale_badge.json  06_article_header.json  07_app_screen.json  08_minimal_logo.json  09_multi_badge.json  10_high_contrast.json
eval/runs/dedup/: 01_simple_banner.json  02_tech_banner.json  03_product_card.json  04_simple_poster.json  05_sale_badge.json  06_article_header.json  07_app_screen.json  08_minimal_logo.json  09_multi_badge.json  10_high_contrast.json
eval/runs/dedup2/: 01_simple_banner.json  02_tech_banner.json  03_product_card.json  04_simple_poster.json  05_sale_badge.json  06_article_header.json  07_app_screen.json  08_minimal_logo.json  09_multi_badge.json  10_high_contrast.json
eval/runs/enriched-v2/: 01_simple_banner.json  02_tech_banner.json  03_product_card.json  04_simple_poster.json  05_sale_badge.json  06_article_header.json  07_app_screen.json  (+4 more)
examples/: generate_example.py
src/imglayers_mcp/: __init__.py  config.py  server.py
tests/: conftest.py  test_engine_selector.py  test_manifest.py  test_tools.py
(+337 files in other folders)
