[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imglayers-mcp"
version = "0.3.0"
description = "MCP server that decomposes design images into editable layers using SAM2 + PaddleOCR + LayerD."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "imglayers-mcp" }]
keywords = ["mcp", "image", "layer", "decomposition", "sam2", "paddleocr", "figma"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6",
    "numpy>=1.26",
    "pillow>=10.2",
    "typer>=0.12",
    "rich>=13.7",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "opencv-python>=4.8",
    "scikit-image>=0.22",
    "hydra-core>=1.3",
    "iopath>=0.1.10",
    "paddleocr>=2.7",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
]

[project.optional-dependencies]
export = [
    "psd-tools>=1.9",
]
grounded_sam2 = [
    "groundingdino-py>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
imglayers-mcp = "imglayers_mcp.server:main"
imglayers-download-weights = "imglayers_mcp.scripts.download_sam2_weights:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
